--- a/Site/index.html
+++ b/Site/index.html
@@ -2,12 +2,28 @@
 
 <head>
     <meta charset="utf-8">
+    <title>Nina Gourmet</title>
+    <link rel="icon" href="imagens/chef_hat1600.png">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/bootstrap.css">
     <link rel="stylesheet" href="js/bootstrap.js">
     <link rel="stylesheet" href="CSS/default.css">
     <link rel="stylesheet" href="CSS/index.css">
 </head>
-<body>
-
+<body class="parallax">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="marca navbar-brand" href="#">
+              Nina Gourmet
+          </a>
+        </div>
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="O que você procura ?">
+          </div>
+          <button type="submit" class="btn btn-default">Buscar</button>
+        </form>
+      </div>
+    </nav>
 </body>
