barra fixa emplementada

--- a/Site/index.html
+++ b/Site/index.html
@@ -5,25 +5,31 @@
     <title>Nina Gourmet</title>
     <link rel="icon" href="imagens/chef_hat1600.png">
     <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/bootstrap.css">
-    <link rel="stylesheet" href="js/bootstrap.js">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/default.css">
     <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body class="parallax">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="marca navbar-brand" href="#">
-              Nina Gourmet
-          </a>
-        </div>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="O que você procura ?">
-          </div>
-          <button type="submit" class="btn btn-default">Buscar</button>
-        </form>
-      </div>
-    </nav>
+    <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">Nina Gourmet</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Cardapio</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Como fazer um pedido</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </body>
