--- a/Site/index.html
+++ b/Site/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="CSS/default.css">
     <link rel="stylesheet" href="CSS/index.css">
 </head>
-<body class="parallax">
+<body>
+    <div class="parallax">
+    <!--Barra fixa no topo-->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -38,4 +40,7 @@
         </div>
       </div>
     </nav>
+    <!--Barra fixa no topo-->
+    </div>
+    <!--Footer-->
 </body>
