--- a/Site/index.html
+++ b/Site/index.html
@@ -54,26 +54,35 @@
     <!--Barra fixa no topo-->
     </div>
     <footer id="footer-da-pagina">
-        <br>
-        <center>
-            <img id="logo-rodape" alt="logo" src="imagens/chef_hat1600.png" class="img-responsive">
-            <div class="well well-lg well-rodape">
-                <h3 id="titulo-rodape" class="text-center">Estamos nestas redes sociais</h3>
-                    <a class="btn btn-social btn-group-lg btn-facebook">
-                        <span class="fa fa-facebook"></span> Facebook
-                    </a>
-                    <a class="btn btn-social btn-group-lg btn-instagram">
-                        <span class="fa fa-instagram"></span> Instagram
-                    </a>
-                    <a class="btn btn-social btn-group-lg btn-pinterest">
-                        <span class="fa fa-pinterest"></span> Pinterest
-                    </a>
+        <div class="row">
+            <br>
+            <div class="col-xs-3 col-md-offset-2">
+                <center><img id="logo-rodape" alt="logo" src="imagens/chef_hat1600.png" class="img-responsive"></center>
                 <br>
-                <br>
-                <h4 class="text-center"><i class="fa fa-whatsapp verde" aria-hidden="true"></i> Estamos no WhatsApp (85)99999-9999</h4>
+                <div class="well well-lg well-rodape">
+                    <h3 id="titulo-rodape" class="text-center">Estamos nestas redes sociais</h3>
+                        <a class="btn btn-social btn-group-lg btn-facebook">
+                            <span class="fa fa-facebook"></span> Facebook
+                        </a>
+                        <a class="btn btn-social btn-group-lg btn-instagram">
+                            <span class="fa fa-instagram"></span> Instagram
+                        </a>
+                        <a class="btn btn-social btn-group-lg btn-pinterest">
+                            <span class="fa fa-pinterest"></span> Pinterest
+                        </a>
+                    <br>
+                    <br>
+                    <h4 class="text-center"><i class="fa fa-whatsapp verde" aria-hidden="true"></i> Estamos no WhatsApp (85)99999-9999</h4>
+                </div>
             </div>
-        </center>
+            <div class="col-xs-12 col-md-6 col-md-offset-1">
+                <div id="maps">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8683.272621687718!2d-38.53786088283797!3d-3.745132103312987!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7491a5cfc50e5%3A0x35b7fad8eb59ba84!2sIFCE+-+Campus+de+Fortaleza!5e0!3m2!1spt-BR!2sbr!4v1506797304022" width="800" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>  
+            </div>
         <br>
         <br>
+        </div>
     </footer>
+    
 </body>
