--- a/Site/index.html
+++ b/Site/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="CSS/default.css">
     <link rel="stylesheet" href="CSS/index.css">
 </head>
-<body class="parallax">
-    <div>
+<body>
+    <div class="parallax-capa">
     <!--Barra fixa no topo-->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -35,23 +35,16 @@
           </ul>
         <form class="navbar-form navbar-right" role="search">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control" placeholder="Que prato você deseja?">
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Pesquisar</button>
         </form>
         </div>
       </div>
     </nav>
-    <p class="text-justify">Lorem ipsum mollis hendrerit viverra aenean dolor felis eleifend ut, pellentesque est nisl curae etiam massa elementum morbi dapibus, ultrices eleifend mollis vel ultrices diam taciti in. aliquet porta potenti dolor malesuada posuere nulla nisl, nibh ut tincidunt placerat ornare erat elit commodo, cursus tristique laoreet donec rhoncus himenaeos. vel sed himenaeos rhoncus eget iaculis cubilia eros euismod, tristique dictum ultrices fringilla tellus est nunc massa ut, himenaeos convallis mi ornare faucibus morbi porttitor. aenean non lorem curabitur cras ante maecenas dictumst, metus sem ut torquent velit vehicula, tincidunt euismod sodales rhoncus sociosqu facilisis. </p>
-    <p class="text-justify">Placerat tempus commodo adipiscing elementum consequat eu netus ante sit blandit aenean, et inceptos ultricies amet ante sapien laoreet venenatis eleifend dolor. habitasse lacinia et sollicitudin curabitur diam molestie eu tempus vestibulum nam aliquam, non tristique ligula dolor leo dictum est bibendum dapibus bibendum, ultricies in ut eu ut nullam quis curabitur dapibus consectetur. tincidunt curabitur mi placerat nostra turpis feugiat sollicitudin duis morbi, ante pretium feugiat consectetur lobortis potenti ut etiam, pellentesque vehicula volutpat pharetra varius bibendum non donec. leo posuere urna nibh leo vel velit, lobortis molestie pulvinar fames rutrum arcu, rhoncus nisl pharetra rutrum pretium. </p>
-    <p class="text-justify">Consequat torquent sem duis tristique sit vivamus vestibulum ornare dui tempus hendrerit est, at hac dui eros congue dolor fames purus congue dolor. nec dui venenatis maecenas etiam hac, venenatis placerat cubilia phasellus, condimentum metus dictum pulvinar. rhoncus a dui morbi pharetra fermentum sodales potenti dictum inceptos morbi aptent nullam primis, platea a mollis varius pulvinar ullamcorper ante hac tristique convallis pulvinar leo. lacus ullamcorper augue tempus nostra nisl massa aenean, hac fringilla accumsan euismod quam at litora ad, est integer pellentesque volutpat aliquam dictum. hac porttitor lacus vel volutpat tempor justo vehicula felis etiam blandit sodales lacinia, congue dolor litora convallis integer mi nibh rutrum ultrices hendrerit tristique. </p>
-    <p class="text-justify">Varius orci dui neque molestie cursus sit, vulputate dui habitasse augue potenti, conubia nam et velit varius. fusce nisi cras pulvinar praesent id facilisis tristique morbi, gravida at aliquam amet bibendum pellentesque luctus, nulla a nisi quisque diam semper imperdiet. nibh amet phasellus mauris inceptos est vitae sodales senectus sollicitudin, urna orci morbi accumsan condimentum ornare velit eleifend sem, consectetur urna ultrices turpis sociosqu vulputate lectus nostra. fames diam condimentum malesuada morbi eleifend eu tellus hendrerit tellus non conubia, eleifend consequat habitant odio turpis litora pellentesque per aenean pharetra suscipit, tempus quisque dictumst nisi amet enim nam enim etiam ut. </p>
-    <p class="text-justify">Consequat torquent sem duis tristique sit vivamus vestibulum ornare dui tempus hendrerit est, at hac dui eros congue dolor fames purus congue dolor. nec dui venenatis maecenas etiam hac, venenatis placerat cubilia phasellus, condimentum metus dictum pulvinar. rhoncus a dui morbi pharetra fermentum sodales potenti dictum inceptos morbi aptent nullam primis, platea a mollis varius pulvinar ullamcorper ante hac tristique convallis pulvinar leo. lacus ullamcorper augue tempus nostra nisl massa aenean, hac fringilla accumsan euismod quam at litora ad, est integer pellentesque volutpat aliquam dictum. hac porttitor lacus vel volutpat tempor justo vehicula felis etiam blandit sodales lacinia, congue dolor litora convallis integer mi nibh rutrum ultrices hendrerit tristique. </p>
-    <p class="text-justify">Consequat torquent sem duis tristique sit vivamus vestibulum ornare dui tempus hendrerit est, at hac dui eros congue dolor fames purus congue dolor. nec dui venenatis maecenas etiam hac, venenatis placerat cubilia phasellus, condimentum metus dictum pulvinar. rhoncus a dui morbi pharetra fermentum sodales potenti dictum inceptos morbi aptent nullam primis, platea a mollis varius pulvinar ullamcorper ante hac tristique convallis pulvinar leo. lacus ullamcorper augue tempus nostra nisl massa aenean, hac fringilla accumsan euismod quam at litora ad, est integer pellentesque volutpat aliquam dictum. hac porttitor lacus vel volutpat tempor justo vehicula felis etiam blandit sodales lacinia, congue dolor litora convallis integer mi nibh rutrum ultrices hendrerit tristique. </p>
-    <p class="text-justify">Consequat torquent sem duis tristique sit vivamus vestibulum ornare dui tempus hendrerit est, at hac dui eros congue dolor fames purus congue dolor. nec dui venenatis maecenas etiam hac, venenatis placerat cubilia phasellus, condimentum metus dictum pulvinar. rhoncus a dui morbi pharetra fermentum sodales potenti dictum inceptos morbi aptent nullam primis, platea a mollis varius pulvinar ullamcorper ante hac tristique convallis pulvinar leo. lacus ullamcorper augue tempus nostra nisl massa aenean, hac fringilla accumsan euismod quam at litora ad, est integer pellentesque volutpat aliquam dictum. hac porttitor lacus vel volutpat tempor justo vehicula felis etiam blandit sodales lacinia, congue dolor litora convallis integer mi nibh rutrum ultrices hendrerit tristique. </p>
-    <p class="text-justify">Consequat torquent sem duis tristique sit vivamus vestibulum ornare dui tempus hendrerit est, at hac dui eros congue dolor fames purus congue dolor. nec dui venenatis maecenas etiam hac, venenatis placerat cubilia phasellus, condimentum metus dictum pulvinar. rhoncus a dui morbi pharetra fermentum sodales potenti dictum inceptos morbi aptent nullam primis, platea a mollis varius pulvinar ullamcorper ante hac tristique convallis pulvinar leo. lacus ullamcorper augue tempus nostra nisl massa aenean, hac fringilla accumsan euismod quam at litora ad, est integer pellentesque volutpat aliquam dictum. hac porttitor lacus vel volutpat tempor justo vehicula felis etiam blandit sodales lacinia, congue dolor litora convallis integer mi nibh rutrum ultrices hendrerit tristique. </p>
-    <p class="text-justify">Consequat torquent sem duis tristique sit vivamus vestibulum ornare dui tempus hendrerit est, at hac dui eros congue dolor fames purus congue dolor. nec dui venenatis maecenas etiam hac, venenatis placerat cubilia phasellus, condimentum metus dictum pulvinar. rhoncus a dui morbi pharetra fermentum sodales potenti dictum inceptos morbi aptent nullam primis, platea a mollis varius pulvinar ullamcorper ante hac tristique convallis pulvinar leo. lacus ullamcorper augue tempus nostra nisl massa aenean, hac fringilla accumsan euismod quam at litora ad, est integer pellentesque volutpat aliquam dictum. hac porttitor lacus vel volutpat tempor justo vehicula felis etiam blandit sodales lacinia, congue dolor litora convallis integer mi nibh rutrum ultrices hendrerit tristique. </p>
     <!--Barra fixa no topo-->
+        <h1 id="titulo" class="text-center">Aqui, comida é de casa</h1>
+    <!--Footer-->
     </div>
     <footer id="footer-da-pagina">
         <div class="row">
@@ -72,7 +65,7 @@
                         </a>
                     <br>
                     <br>
-                    <h4 class="text-center"><i class="fa fa-whatsapp verde" aria-hidden="true"></i> Estamos no WhatsApp (85)99999-9999</h4>
+                    <h4 class="text-center"><i class="fa fa-whatsapp verde" aria-hidden="true"></i> WhatsApp (85)99999-9999</h4>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6 col-md-offset-1">
@@ -84,5 +77,4 @@
         <br>
         </div>
     </footer>
-    
 </body>
