--- a/Site/index.html
+++ b/Site/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <head>
     <meta charset="utf-8">
     <title>Nina Gourmet</title>
@@ -15,37 +14,94 @@
 </head>
 <body>
     <div class="parallax-capa">
-    <!--Barra fixa no topo-->
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>                        
-          </button>
-          <a class="navbar-brand" href="#">Nina Gourmet</a>
+        <!--Barra fixa no topo-->
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>                        
+                    </button>
+                    <a class="navbar-brand" href="#">Nina Gourmet</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Cardapio</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Como fazer um pedido</a></li>
+                    </ul>
+                    <form class="navbar-form navbar-right" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Que prato você deseja?">
+                        </div>
+                        <button type="submit" class="btn btn-default">Pesquisar</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <!--Barra fixa no topo-->
+        <br>
+        <br>
+        <h1 id="titulo" class="sombra text-center">Aqui, comida é de casa !</h1>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Cardapio</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Como fazer um pedido</a></li>
-          </ul>
-        <form class="navbar-form navbar-right" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Que prato você deseja?">
-          </div>
-          <button type="submit" class="btn btn-default">Pesquisar</button>
-        </form>
-        </div>
-      </div>
-    </nav>
-    <!--Barra fixa no topo-->
-        <h1 id="titulo" class="text-center">Aqui, comida é de casa</h1>
-    <!--Footer-->
-    </div>
+        <!--Footer-->
+        <main>
+            <div class="parallax-principal">
+                <div class="row">
+                    <br>
+                    <center><h2 class="text-center sombra">Pratos Novos</h2></center>
+                    <br>
+                </div>
+                <div class="row">
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <div class="row bolha">
+                            <div class="col-md-5 col-md-offset-1 col-xs-10">
+                                <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-70497.jpeg" alt="comida 2">
+                            </div>
+                            <div class="col-md-5 col-xs-10">
+                                <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
+                                <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
+                                <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <div class="row bolha">
+                            <div class="col-md-5 col-md-offset-1">
+                                <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
+                                <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
+                                <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
+                            </div>
+                            <div class="col-md-5">
+                                <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-376464.jpeg" alt="comida 1">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <div class="row bolha">
+                            <div class="col-md-5 col-md-offset-1">
+                                <img class="img-responsive img-thumbnail" src="imagens/pratos/salmon-dish-food-meal-46239.jpeg" alt="comida 3">
+                            </div>
+                            <div class="col-md-5">
+                                <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
+                                <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
+                                <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>
+        </main>
     <footer id="footer-da-pagina">
         <div class="row">
             <br>
@@ -54,15 +110,15 @@
                 <br>
                 <div class="well well-lg well-rodape">
                     <h3 id="titulo-rodape" class="text-center">Estamos nestas redes sociais</h3>
-                        <a class="btn btn-social btn-group-lg btn-facebook">
-                            <span class="fa fa-facebook"></span> Facebook
-                        </a>
-                        <a class="btn btn-social btn-group-lg btn-instagram">
-                            <span class="fa fa-instagram"></span> Instagram
-                        </a>
-                        <a class="btn btn-social btn-group-lg btn-pinterest">
-                            <span class="fa fa-pinterest"></span> Pinterest
-                        </a>
+                    <a class="btn btn-social btn-group-lg btn-facebook">
+                    <span class="fa fa-facebook"></span> Facebook
+                    </a>
+                    <a class="btn btn-social btn-group-lg btn-instagram">
+                    <span class="fa fa-instagram"></span> Instagram
+                    </a>
+                    <a class="btn btn-social btn-group-lg btn-pinterest">
+                    <span class="fa fa-pinterest"></span> Pinterest
+                    </a>
                     <br>
                     <br>
                     <h4 class="text-center"><i class="fa fa-whatsapp verde" aria-hidden="true"></i> WhatsApp (85)99999-9999</h4>
@@ -71,10 +127,10 @@
             <div class="col-xs-12 col-md-6 col-md-offset-1">
                 <div id="maps">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8683.272621687718!2d-38.53786088283797!3d-3.745132103312987!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7491a5cfc50e5%3A0x35b7fad8eb59ba84!2sIFCE+-+Campus+de+Fortaleza!5e0!3m2!1spt-BR!2sbr!4v1506797304022" width="800" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>  
+                </div>
             </div>
-        <br>
-        <br>
+            <br>
+            <br>
         </div>
     </footer>
 </body>
