trocar cores das seções

--- a/Site/index.html
+++ b/Site/index.html
@@ -58,7 +58,7 @@
                 <br>
                 <center>
                     <a href="#">
-                        <h2 id="btn-pratos-novos" class="text-center sombra btn-primary">Pratos Novos</h2>
+                        <h2 id="btn-pratos-novos" class="text-center sombra btn-danger">Pratos Novos</h2>
                     </a>
                     <a href="#">
                         <h2 id="btn-recomendacao" class="text-center sombra">Recomendações da Semana</h2>
