--- a/Site/index.html
+++ b/Site/index.html
@@ -57,9 +57,9 @@
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1">
                 <br>
-                <button id="btn-pratos-novos" class="btn btn-lg text-center sombra">Pratos Novos</button>
-                <button id="btn-promocoes" class="btn btn-lg text-center sombra btn-danger">Promoções</button>
                 <button id="btn-recomendacao" class=" btn btn-lg text-center sombra btn-danger">Recomendações da Semana</button>
+                <button id="btn-pratos-novos" class="disabled btn btn-lg text-center sombra btn-danger">Pratos Novos</button>
+                <button id="btn-promocoes" class="btn btn-lg text-center sombra btn-danger">Promoções</button>
                 <br>
                 </div>
             </div>
